<resources>
    <string name="app_name">priori</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
    <string name="register_email">email</string>
    <string name="register_name">name</string>
    <string name="register_password">password</string>iop
    <string name="register_pass_confirm">re-enter password</string>
    <string name="register_birthday">birthday</string>

    <string name="darkMode">com.priori.app.beta.darkMode</string>
    <string name="mantraCheck">true</string>
    <string name="register_button">register</string>
    <string name="login_button">Login</string>
    <string name="dark_mode_label">Dark Mode</string>
    <string name="mantra_label">Motivational Mantra</string>
    <string name="import_calendar_button">Import Google Calendar</string>
    <string name="fingerprint_label">Fingerprint Login</string>
    <string name="weather_label">Weather Widget</string>
    <string name="backup_label">Automatic Backup</string>
    <string name="weather_location">Weather Location:</string>
    <string name="welcome_default">Welcome Default:</string>
    <string name="productivity_tracker">Productivity Tracker</string>
    <string name="settings_label">Settings</string>
    <string name="signout_button">Sign out</string>
    <string name="steps">000</string>
    <string name="start_steps">Start</string>


</resources>
